src/parse/snapshots/script_lang__parse__test__primary__empty_array.snap
---
source: src/parse/test.rs
assertion_line: 627
expression: ast

---
Literal(
    Array(
        [],
        Span {
            start: 0,
            end: 0,
        },
    ),
)
