src/parse/snapshots/script_lang__parse__test__primary__empty_array_literal.snap
---
source: src/parse/test.rs
assertion_line: 655
expression: ast

---
Literal(
    Array(
        [],
        Span {
            start: 0,
            end: 0,
        },
    ),
)
