src/parse/snapshots/script_lang__parse__test__primary__empty_object.snap
---
source: src/parse/test.rs
assertion_line: 620
expression: ast

---
Literal(
    Object(
        Span {
            start: 0,
            end: 0,
        },
    ),
)
