src/parse/snapshots/script_lang__parse__test__primary__ident_test.snap
---
source: src/parse/test.rs
assertion_line: 599
expression: ast

---
Ident(
    Ident {
        sym: "tokens",
        span: Span {
            start: 0,
            end: 0,
        },
    },
)
