src/parse/snapshots/script_lang__parse__test__primary__null.snap
---
source: src/parse/test.rs
assertion_line: 648
expression: ast

---
Literal(
    Null(
        Span {
            start: 0,
            end: 0,
        },
    ),
)
