src/parse/snapshots/script_lang__parse__test__primary__number.snap
---
source: src/parse/test.rs
assertion_line: 613
expression: ast

---
Literal(
    String(
        "uwu",
        Span {
            start: 0,
            end: 0,
        },
    ),
)
