src/parse/snapshots/script_lang__parse__test__primary__r#true.snap
---
source: src/parse/test.rs
assertion_line: 641
expression: ast

---
Literal(
    Boolean(
        true,
        Span {
            start: 0,
            end: 0,
        },
    ),
)
