src/parse/snapshots/script_lang__parse__test__primary__single_array_literal.snap
---
source: src/parse/test.rs
assertion_line: 662
expression: ast

---
Literal(
    Array(
        [
            Literal(
                Number(
                    10.0,
                    Span {
                        start: 0,
                        end: 0,
                    },
                ),
            ),
        ],
        Span {
            start: 0,
            end: 0,
        },
    ),
)
