src/parse/snapshots/script_lang__parse__test__primary__string.snap
---
source: src/parse/test.rs
assertion_line: 606
expression: ast

---
Literal(
    Number(
        10.0,
        Span {
            start: 0,
            end: 0,
        },
    ),
)
