src/parse/snapshots/script_lang__parse__test__primary__two_array_literal.snap
---
source: src/parse/test.rs
assertion_line: 678
expression: ast

---
Literal(
    Array(
        [
            Literal(
                Number(
                    10.0,
                    Span {
                        start: 0,
                        end: 0,
                    },
                ),
            ),
            Literal(
                Number(
                    10.0,
                    Span {
                        start: 0,
                        end: 0,
                    },
                ),
            ),
        ],
        Span {
            start: 0,
            end: 0,
        },
    ),
)
